--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
-html, body { height: 100%; }
+html,
+body {
+  height: 100%;
+}
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
 .mat-mdc-snack-bar-container.success-snackbar {
   --mdc-snackbar-container-color: #4caf50;
